Creation of plan to implementing backend logic for GetRoadByID API endpoint
user & log bug fixed, get road by id added
